# UC2-REST-CANOPEN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: can_sniffer.py
src/: motor_demo.py
src/uc2canopen/: __init__.py  cli.py  client.py  od.py  sdo.py  waveshare_bus.py
